# gbemu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
src/: gbemu.c  read_opcodes.py
src/lib/: CMakeLists.txt  bus.c  bus.h  cartridge.c  cartridge.h  cpu.c  cpu.h  disassemble.c  disassemble.h  gb.c  gb.h  global.h  instruction.c  instruction.h  mbc.c  mbc.h  ppu.h  timer.c  timer.h  translate.c  translate.h
tests/: cpu_test.h  test.c  testing.h
tests/roms/: ModPokemonRed.gb
